upstart-web supports cors configuration